solc_mutator_ossfuzz_seed_corpus/test_sol/test_3d15da93190f4efa2eff121341b5dc2bc34b07cc9c54eb1ba78c05452f5b13c5_30b26987add3f1a4b22afca7ef63d3adaf9db631_sol.sol
==== Source:  ====

==== Source: su0.sol ====
struct St0 {
  function (int120, function (bytes3) external  ) external   returns (int56, bool) el0;
  string el1;
}
pragma solidity >= 0.0.0;
library L0 {
  modifier m0(bytes23 i0) 
  {
    int144 l0 = int144(-5613189178577631521731347923747963664293148);
    _;
  }
  function f0(bytes29[] memory i0,int152 i1) external  m0(bytes23(0x0000000000000000000000000000000000000000000000)) m0(bytes14(0x0000000000000000000000000000))  returns(function (address payable, bool, bool) external   returns (bool) o0,string memory o1)
  {
    (bool l0) = o0(payable(address(0x0000000000000000000000000000000000000003)),(!(true)),true);
    (bool l1) = o0(payable(address(0x0000000000000000000000000000000000000004)),(false || (true && (l0 = false))),(false ? (false ? (o0({i0: payable(address(0x0000000000000000000000000000000000000002)), i1: true, i2: true}) ? true : false) : true) : true));
  }
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65, M66, M67, M68, M69, M70, M71

  }
  error er0();
}
using L0 for uint;
using L0 for uint;
using L0 for uint;
using L0 for uint;
// ----
// TypeError 4974: (su0.sol:758-848): Named argument "i0" does not match function declaration.
// TypeError 4974: (su0.sol:758-848): Named argument "i1" does not match function declaration.
// TypeError 4974: (su0.sol:758-848): Named argument "i2" does not match function declaration.
